Closed Bug 1778754 Opened 3 years ago Closed 1 years ago

WDBA doesn't show notification or send telemetry if checking default PDF application fails

Categories

(Toolkit :: Default Browser Agent, defect, P3)

defect

Tracking

()

RESOLVED FIXED
119 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- wontfix
firefox-esr115 --- wontfix
firefox102 --- wontfix
firefox103 --- wontfix
firefox104 --- wontfix
firefox105 --- wontfix
firefox106 --- wontfix
firefox117 --- wontfix
firefox118 --- wontfix
firefox119 --- fixed

People

(Reporter: bytesized, Assigned: nrishel)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression, Whiteboard: [fidedi-ope])

Attachments

(2 files, 1 obsolete file)

I'm trying to run some manual testing on the code that I'm writing for Bug 1776069. But I'm not seeing any notifications at all. When I look in the Event Viewer, I see

0x80070483 in GetDefaultPdf:54

Judging by this line, it looks to me like we never show any notifications or send any pings if we fail determine the default PDF viewer. It doesn't seem to me like this ought to be a fatal error.

Set release status flags based on info from the regressing bug 1742674

:nrishel, since you are the author of the regressor, bug 1742674, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(nrishel)

If we're truly losing Telemetry (and it looks like we are) this seems like a P1 issue.

Severity: -- → S3
Priority: -- → P1
Whiteboard: [fidedi-ope]

Is there an apparent drop in telemetry when it landed in stable or is this a rare scenario?

The same behavior applies to reading the default browser, so I guess that should be updated while I'm investigating?

(In reply to Nick Rishel [:nrishel] from comment #4)

The same behavior applies to reading the default browser, so I guess that should be updated while I'm investigating?

I'm happy going either way on this.

I do feel like the optimal thing would be to report errors back to telemetry in either failure case. But I would consider showing the notifications to be the WDBA's primary purpose. So it seems important to me that, if we can, we show that notification.

Since we can't really show the notification without knowing the default browser, I'm okay with bailing out if that fails. But we can still show the notification if the PDF check fails, so I don't really want to bail out completely in that case.

(In reply to Nick Rishel [:nrishel] from comment #4)

Is there an apparent drop in telemetry when it landed in stable or is this a rare scenario?

I wouldn't consider myself a pro at analyzing telemetry, but a cursory look suggests to me that we didn't see a significant drop when this merged.


I think that I figured out what was causing me to get that error though. I could reproduce it consistently. Looking in the settings, it showed that I had a PDF viewer set. However, I tried opening a PDF file and was greeted with the "what program do you want to open this with" prompt. I seem to recall that Windows does this when you install a new handler for an application? I selected my PDF reader in the prompt and now the WDBA is no longer consistently hitting that error for me.

(In reply to Kirk Steuber (he/him) [:bytesized] from comment #6)

(In reply to Nick Rishel [:nrishel] from comment #4)

Is there an apparent drop in telemetry when it landed in stable or is this a rare scenario?

I wouldn't consider myself a pro at analyzing telemetry, but a cursory look suggests to me that we didn't see a significant drop when this merged.

Given this, I'm lowering the priority.

Priority: P1 → P3

Set release status flags based on info from the regressing bug 1742674

Assignee: nobody → nrishel
Flags: needinfo?(nrishel)
Duplicate of this bug: 1780213

The severity field for this bug is set to S3. However, the following bug duplicate has higher severity:

:nrishel, could you consider increasing the severity of this bug to S2?

For more information, please visit auto_nag documentation.

Flags: needinfo?(nrishel)

Clearing ni, severity is appropriate as-is.

Flags: needinfo?(nrishel)
Blocks: 1838749

Adds error enum and strings to WDBA telemetry.

Depends on D174973

There is an r+ patch which didn't land and no activity in this bug for 2 weeks.
:nrishel, could you have a look please?
If you still have some work to do, you can add an action "Plan Changes" in Phabricator.
For more information, please visit BugBot documentation.

Flags: needinfo?(nrishel)
Flags: needinfo?(bytesized)

I'm going to leave this for nrishel to answer.

Flags: needinfo?(bytesized)
Pushed by nrishel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d412fdc431d3 Send WDBA telemetry even when default browser or PDF telemetry fails. r=bytesized

Backed out for causing multiple build bustages.
So far, this has only affected windows.

Flags: needinfo?(nrishel)
Flags: needinfo?(nrishel)
Pushed by nrishel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/341d00ab9386 Send WDBA telemetry even when default browser or PDF telemetry fails. r=bytesized
Status: NEW → RESOLVED
Closed: 1 years ago
Resolution: --- → FIXED
Target Milestone: --- → 119 Branch

The patch landed in nightly and beta is affected.
:nrishel, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox118 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(nrishel)
Flags: needinfo?(nrishel)

Is this something that should be considered for ESR?

Flags: needinfo?(nrishel)

Impact is low and not user facing so my initial instinct is probably not.

Flags: needinfo?(nrishel)

Backed out changeset efc3444da9bb (bug 1851714)
Backed out changeset df36b070d90e (bug 1853144)
Backed out changeset 996e3cf63378 (bug 1852881)
Backed out changeset daceab96e958 (bug 1850631)
Backed out changeset db960ca5d490 (bug 1852412)
Backed out changeset b0b5db15d567 (bug 1851937)
Backed out changeset a2f73b54db1f (bug 1851857)
Backed out changeset f06abc41688e (bug 1851930)
Backed out changeset 214f0e1df0dd (bug 1851930)
Backed out changeset 341d00ab9386 (bug 1778754)
Backed out changeset 33dc6c6f62d7 (bug 1838754)
Backed out changeset 1da5e2dc15f9 (bug 1838754)
Backed out changeset ef4f82aa3980 (bug 1838754)
Backed out changeset 27b6015a6b28 (bug 1838754)
Backed out changeset fb4dfb4d76c1 (bug 1838754)
Backed out changeset ff651e1a09c7 (bug 1838754)
Backed out changeset 617f15d7dff8 (bug 1838754)
Backed out changeset 868fdde83bdc (bug 1838754)

Conflict resolved with changeset 845f618bbdf6 (bug 1840096)

Backed out due to changes breaking both Default Agent telemetry and launching Firefox in response to interaction with the Default Agent notifications.

Attachment #9358149 - Attachment is obsolete: true

Backed out due to changes breaking both Default Agent telemetry and launching Firefox in response to interaction with the Default Agent notifications.

Conflict resolved with changeset 845f618bbdf6 (bug 1840096)

Depends on D190873

Attachment #9358194 - Attachment description: Backed out changeset 341d00ab9386 (Bug 1778754) → WIP: Backed out changeset 341d00ab9386 (Bug 1778754)
Attachment #9358194 - Attachment description: WIP: Backed out changeset 341d00ab9386 (Bug 1778754) → Backed out changeset 341d00ab9386 (Bug 1778754)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: