Bug 1778754 - Send WDBA telemetry even when default browser or PDF telemetry fails. r=bytesized

Adds error enum and strings to WDBA telemetry.

Depends on D187069

Differential Revision: https://phabricator.services.mozilla.com/D185632