toolkit/mozapps/defaultagent/DefaultBrowser.h
@@ -12,9 +12,10 @@
 #include "mozilla/DefineEnum.h"
 #include "mozilla/WinHeaderOnlyUtils.h"
 
-MOZ_DEFINE_ENUM_CLASS(Browser, (Unknown, Firefox, Chrome, EdgeWithEdgeHTML,
-                                EdgeWithBlink, InternetExplorer, Opera, Brave,
-                                Yandex, QQBrowser, _360Browser, Sogou));
+MOZ_DEFINE_ENUM_CLASS(Browser,
+                      (Error, Unknown, Firefox, Chrome, EdgeWithEdgeHTML,
+                       EdgeWithBlink, InternetExplorer, Opera, Brave, Yandex,
+                       QQBrowser, _360Browser, Sogou));
 
 struct DefaultBrowserInfo {
   Browser currentDefaultBrowser;
